--- a/crawl_arxiv.ipynb
+++ b/crawl_arxiv.ipynb
@@ -14093,7 +14093,7 @@
     "\n",
     "import os\n",
     "import requests\n",
-    "from backend import *\n",
+    "from jhw_pdf_parser.grobid_base.datasetgenius.backend import *\n",
     "import shutil\n",
     "from tqdm import tqdm\n",
     "\n",
